--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_URL = http://localhost:5000
-
+# REACT_APP_BASE_URL = http://localhost:5000
+REACT_APP_BASE_URL=https://render.com/docs/web-services#port-binding
